# fraud_finder

./: .gitignore  Dockerfile  README.md  app.py  build_model.py  docker-compose.dev.yml  perfect_precision_log.txt  pyproject.toml
src/: evaluate.py  main.py  preprocess.py  train.py
